--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image and Audio Loop</title>
+    <title>Linga Bhairavi</title> <!-- Set your site name here -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Google Tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F4SCGJETP8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-F4SCGJETP8');
+    </script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="devi-icon.ico" type="image/x-icon"> <!-- Update the href to match your favicon's path -->
 </head>
 <body>
 <div class="container">
