add comments section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <!-- Background image -->
     <img src="lingabhairavi.jpg" alt="Background Image" class="background-image">
 
+    <!-- Comments link at the top right -->
+    <a href="https://forms.gle/e6q3QABqvbn3oWjV9" target="_blank" class="comments-link">Comments</a>
+
     <!-- Instructions to click to start audio -->
     <p>Click anywhere on the page to start the audio</p>
 
